--- a/src/style.css
+++ b/src/style.css
@@ -392,4 +392,53 @@ body {
   display: contents;
   height: 100px;
 }
+
+.newTrend-section {
+  width: 1130px;
+  height: 400px;
+  background: #000000;
+  margin: 10px auto;
+}
+
+.newTrend-section .newTrend-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.newTrend-section .newTrend-container .newTrend-card {
+  background: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 180px;
+  margin: 0px 15px;
+}
+
+.newTrend-section .newTrend-container .newTrend-card img {
+  width: 150px;
+}
+
+.newTrend-section .newTrend-container .newTrend-card ul li a {
+  text-decoration: none;
+  color: #000000;
+}
 /*# sourceMappingURL=style.css.map */
